[package]
name = "zinc64-psp"
version = "0.1.0"
authors = [
    "Paul Sajna <hello@paulsajna.com>",
    "Sebastian Jastrzebski <sebby2k@gmail.com>"
]
description = "Commodore 64 emulator port to the Sony PSP"
license = "GPL-3.0+" # I guess it has to be due to infectious licenses
keywords = ["psp", "c64", "commodore", "emulator", "no_std"]
categories = ["emulators"]
edition = "2018"

[dependencies]
psp = { version = "0.3.11" }
zinc64-core = { path = "zinc64/zinc64-core", default-features = false }
zinc64-system = { path = "zinc64/zinc64-system", default-features = false }
resid-rs = { version = "1.1.1", default-features=false, features=["alloc"] }

[patch.crates-io]
resid-rs = { path = "resid-rs" }
zinc64-core = { path = "zinc64/zinc64-core" }
zinc64-system = { path = "zinc64/zinc64-system" }

[profile.release]
opt-level=3
lto="fat"
codegen-units=1
overflow-checks=false
#debug=true
